--- a/style.css
+++ b/style.css
@@ -3,10 +3,14 @@
 	box-sizing: border-box;
 	padding: 0;
   }
+
+  html{
+	/* scroll-behavior: smooth; */
+  }
   
   body {
 	background-color: #1b4332;
-	height: 120vh;
+	height: 200vh;
 	/* overflow: hidden; */
   }
   
@@ -57,6 +61,39 @@
 	border-radius: 10px;
   }
 
+  .home-screen{
+	width: 100%;
+	height: 80vh;
+
+	display: flex;
+	align-items: center;
+	justify-content: space-evenly;
+  }
+
+  .case-logo{
+	width:auto;
+	height: 50vh;
+  }
+
+  #logo{
+	height: 50vh;
+	border-radius: 50%;
+  }
+
+  .text-welcome{
+	font-family: 'Pacifico', cursive;
+	color: #b7e4c7;
+	text-decoration: none;
+
+	#title{
+		font-size: 5vw;
+	}
+
+	#subtitle{
+		font-size: 3vw;
+	}
+  }
+
   .down-arrow {
 	position: absolute;
 	bottom: 0;
@@ -72,6 +109,11 @@
 	color: #B7E4C7;
 	transform: rotate(180deg);
 	cursor: pointer;
+  }
+
+  .history{
+	width: auto;
+	height: 100vh;
   }
   
   @keyframes bounce {
