--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@
 	width: auto;
 	height: 100%;
 	margin-bottom: 1vh;
-	background-color: #2d6a4f;
+	/* background-color: #2d6a4f; */
+	background-image: url("./img/wood_back.jpg");
   }
   
   .nav {
@@ -36,7 +37,8 @@
   
   li a {
 	font-family: 'Pacifico', cursive;
-	color: #b7e4c7;
+	/* color: #b7e4c7; */
+	color: #2d6a4f;
 	text-decoration: none;
 	font-size: 2vw;
   }
@@ -44,6 +46,10 @@
   li a:hover {
 	color: #d8f3dc;
 	transition: 0.5s;
+  }
+
+  #to-history{
+	cursor: pointer;
   }
   
   ::-webkit-scrollbar {
@@ -57,7 +63,7 @@
 
   .home-screen{
 	width: 100%;
-	height: 80vh;
+	height: 88vh;
 
 	display: flex;
 	align-items: center;
@@ -100,24 +106,70 @@
   
   .down-arrow__icon {
 	font-size: 3em;
-	color: #B7E4C7;
+	/* color: #B7E4C7; */
 	transform: rotate(180deg);
 	cursor: pointer;
+	background-image: url('./img/wood_back.jpg');
+	-webkit-background-clip: text;
+	background-clip: text;
+	color: transparent;
   }
 
   .history{
 	width: auto;
 	height: 100vh;
+	background-color: #b7e4c7;
   }
   
-  @keyframes bounce {
+.history-title{
+	width: 100%;
+	height: 14vh; 
+}
+
+#history-title{
+	font-size: 5vw;
+	font-family: 'Pacifico', cursive;
+	text-align: center;
+
+	background-image: url('./img/wood_back.jpg');
+	-webkit-background-clip: text;
+	background-clip: text;
+	color: transparent;
+}
+
+.history-text{
+	width: 100vw;
+	height:86vh;
+	text-align:justify;
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	flex: auto;
+	
+
+	p{
+		/* height: 50%; */
+		flex-wrap: wrap;
+		font-size: 2.3vw;
+		font-family: 'Pacifico', cursive;
+		color: #2d6a4f;
+		
+		margin-bottom: auto;
+		margin-top: auto;
+		margin-left: 2vw;
+		margin-right: 2vw;
+	}
+
+}
+
+@keyframes bounce {
 	0% {
-	  bottom: 0;
+		bottom: 0;
 	}
 	50% {
-	  bottom: 20px;
+		bottom: 20px;
 	}
 	100% {
-	  bottom: 0;
+		bottom: 0;
 	}
-  }
+}
