--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
 	transition: 0.5s;
   }
 
-  #to-history{
+  #to-history, #to-products, #to-team, #to-contact{
 	cursor: pointer;
   }
   
@@ -115,6 +115,9 @@
 	color: transparent;
   }
 
+  
+
+
   .history{
 	width: auto;
 	height: 100vh;
@@ -159,7 +162,6 @@
 		margin-left: 2vw;
 		margin-right: 2vw;
 	}
-
 }
 
 @keyframes bounce {
@@ -173,3 +175,67 @@
 		bottom: 0;
 	}
 }
+
+.products{
+	background-image: url("./img/wood_back_large.jpg");
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	align-items: center;
+}
+
+.grid {
+	width: 100%;
+	height: auto;
+	
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.card {
+	width: auto;
+	height: 100%;
+	border-radius: 30px;
+
+	background-image: url("./img/back\ product.png");
+	background-size: cover;
+	position: relative;
+	
+	.img_product{
+		width: 20vw;
+		height: 60vh;
+		transition-duration: 1s;
+	}
+
+	.img_product:hover{
+		transform: scale(1.1);
+		transition-duration: 1s;
+	}
+
+	#in-creation{
+		filter:grayscale(100%);
+	}
+
+	.logo_product{
+		position: absolute;
+		top: 1vh;
+		right: 1vh;
+		height: 10vh;
+		border-radius: 50%;
+	}
+
+	p{
+		font-size: 3vw;
+		font-family: 'Pacifico', cursive;
+		text-align: center;
+
+		background-image: url('./img/wood_back.jpg');
+		-webkit-background-clip: text;
+		background-clip: text;
+		color: transparent;
+
+		transform: translateY(-5vh);
+	}
+}
+
+
