--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
+
 * {
 	margin: 0;
 	box-sizing: border-box;
@@ -123,7 +125,7 @@ li a:hover {
 
 .down-arrow-to-history {
 	position: absolute;
-	top: 390vh;
+	top: 393vh;
 	left: 50%;
 	transform: translateX(-50%);
 	width: 50px;
@@ -309,7 +311,7 @@ li a:hover {
 }
 
 .team {
-	height: 200vh;
+	height: 205vh;
 	width: 100%;
 
 	background-color: #2a664d;
@@ -338,9 +340,12 @@ li a:hover {
 		place-items: left;
 		align-content: center;
 		flex-direction: row;
+		background-color: rgb(255, 255, 255, 0.2);
+		border-radius: 20px;
+		padding: 1vh;
 	}
 	h1{
-		font-size: 3vh;
+		font-size: 4vh;
 		text-align: center;
 	}
 	p{
@@ -376,4 +381,76 @@ li a:hover {
 	opacity: 1;
 	filter: blur(0);
 	transform: translateX(0);
+}
+
+.footer {
+	position: relative;
+	width: 100%;
+	background: transparent;
+	min-height: 20vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	font-family: "Poppins", sans-serif;
+	color: #B7E4C7;
+  }
+  
+  .social-icon,
+  .menu {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 10px 0;
+	flex-wrap: wrap;
+  }
+  
+  .social-icon__item,
+  .menu__item {
+	list-style: none;
+  }
+  
+  .social-icon__link {
+	font-size: 2rem;
+	color: #B7E4C7;
+	margin: 0 10px;
+	display: inline-block;
+	transition: 0.5s;
+  }
+  .social-icon__link:hover {
+	transform: translateY(-10px);
+  }
+  
+  .menu__link {
+	font-size: 1.2rem;
+	color: #B7E4C7;
+	margin: 0 10px;
+	display: inline-block;
+	transition: 0.5s;
+	text-decoration: none;
+	opacity: 0.75;
+	font-weight: 300;
+  }
+  
+  .menu__link:hover {
+	opacity: 1;
+  }
+  
+  .footer p {
+	color: #B7E4C7;
+	margin: 15px 0 10px 0;
+	font-size: 1rem;
+	font-weight: 300;
+  }
+  
+.social{
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+
+	div{
+		text-align: center;
+	}
 }
