--- a/style.css
+++ b/style.css
@@ -105,7 +105,6 @@ li a:hover {
 
 .down-arrow-to-products {
 	position: absolute;
-	top: 90vh;
 	left: 50%;
 	transform: translateX(-50%);
 	width: 50px;
@@ -114,28 +113,23 @@ li a:hover {
 }
 
 .down-arrow-to-team {
-	position: absolute;
-	top: 190vh;
-	left: 50%;
-	transform: translateX(-50%);
+	position: relative;
 	width: 50px;
 	height: 50px;
 	animation: bounce 2s infinite;
 }
 
 .down-arrow-to-history {
-	position: absolute;
-	top: 393vh;
-	left: 50%;
-	transform: translateX(-50%);
+	position: relative;
 	width: 50px;
 	height: 50px;
+	margin-left: auto;
+	margin-right: auto;
 	animation: bounce 2s infinite;
 }
 
 .down-arrow__icon {
 	font-size: 3em;
-	/* color: #B7E4C7; */
 	transform: rotate(180deg);
 	cursor: pointer;
 	background-image: url('./img/wood_back.jpg');
@@ -146,7 +140,6 @@ li a:hover {
 
 .down-arrow__icon-to-team {
 	font-size: 3em;
-	/* background-color: #B7E4C7; */
 	transform: rotate(180deg);
 	cursor: pointer;
 	background-image: url('./img/wood_back.jpg');
@@ -156,7 +149,6 @@ li a:hover {
 }
 .down-arrow__icon-to-history {
 	font-size: 3em;
-	/* background-color: #B7E4C7; */
 	transform: rotate(180deg);
 	cursor: pointer;
 	background-image: url('./img/wood_back.jpg');
