--- a/style.css
+++ b/style.css
@@ -359,6 +359,9 @@ li a:hover {
 	.description-team{
 		margin-left: 2vw;
 		margin-right: 2vw;
+		display: flex;
+		justify-content: space-around;
+		flex-direction: column;
 	}
 }
 
@@ -465,6 +468,33 @@ li a:hover {
     margin: 5px 0;
 }
 
+@media screen and (max-width: 1024px) {
+	.home-screen{
+		flex-direction: column;
+
+		#logo{
+			width: 35vw;
+			height: 35vw;
+			aspect-ratio:initial;
+		}
+
+		.case-logo{
+			height: fit-content;
+		}
+
+		#title{
+			margin-top: -10vh;
+			font-size: 13vw;
+			text-align: center;
+		}
+
+		#subtitle{
+			font-size: 5vw;
+			text-align: center;
+		}
+	}
+}
+
 @media screen and (max-width: 930px) {
     
 
@@ -522,9 +552,10 @@ li a:hover {
 		}
 	}
 
-	#products-title{
+	#products-title, #team-title, #history-title{
 		font-size: 15vw;
 	}
+
 
 	.grid{
 		flex-direction: column;
@@ -557,4 +588,73 @@ li a:hover {
 		width: 75vw;
 		height: 75vw;
 	}
+
+	.team{
+		height: max-content;
+	}
+
+	.team-grid{
+
+		margin-top: 0;
+		text-align: center;
+		height: fit-content;
+
+		.leonie , .antonin , .raphael{
+			margin-top: 1vh;
+			margin-bottom: 1vh;
+			margin-left: auto;
+			margin-right: auto;
+
+			width: 95vw;
+			height: 120vw;
+
+			
+		}
+
+		.antonin .hidden{
+			flex-direction: column-reverse;
+		}
+
+		.hidden{
+			flex-direction: column;
+			height: 100%;
+			justify-content: space-around;
+			
+
+			.profil {
+				text-align: center;
+				margin-top: 0;
+				margin-bottom: 0;
+
+				img{
+					width: 35vw;
+					height: 35vw;
+				}
+			}
+
+			.description-team{
+				height: 100%;
+				p{
+					font-size: 3vw;
+				}
+				h3{
+					font-size: 4vw;
+				}
+			}
+		}
+	}
+	.down-arrow-to-history{
+		margin-top: 2vh;
+	}
+
+	.social {
+		height: fit-content;
+		div{
+			display: flex;
+			flex-direction: column;
+			width: 33vw;
+			justify-content: space-between;
+		}
+	}
+	
 }
