--- a/style.css
+++ b/style.css
@@ -262,6 +262,7 @@ li a:hover {
 	border-radius: 30px;
 
 	background-image: url("./img/back\ product.png");
+	/* background-color: #F5F5FA; */
 	background-size: cover;
 	position: relative;
 
@@ -749,3 +750,43 @@ li a:hover {
 	}
 	
 }
+
+
+.button-67 {
+	align-items: center;
+	background: #B7E4C7;
+	border: 0;
+	border-radius: 8px;
+	box-shadow: -10px -10px 30px 0 #d8f3dc,10px 10px 30px 0 #1d0dca17;
+	box-sizing: border-box;
+	color: #2a1f62;
+	cursor: pointer;
+	display: flex;
+	font-family: "Cascadia Code",Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace;
+	font-size: 1rem;
+	justify-content: center;
+	line-height: 1.5rem;
+	padding: 15px;
+	position: relative;
+	/* left: 50%; */
+	/* top: 0; */
+	/* transform: translateX(-50%); */
+	margin-left: auto;
+	margin-right: auto;
+	transform: translateY(-5vh);
+	text-align: left;
+	transition: .2s;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	white-space: pre;
+	width: max-content;
+	word-break: normal;
+	word-spacing: normal;
+	z-index: 999;
+  }
+  
+  .button-67:hover {
+	background: #d8f3dc;
+	box-shadow: -15px -15px 30px 0 #d8f3dc, 15px 15px 30px 0 #1d0dca17;
+  }
