--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ li a:hover {
 		width: 20vw;
 		height: 80%;
 		transition-duration: 1s;
+		cursor: pointer;
 	}
 
 	.img_product:hover {
@@ -295,7 +296,49 @@ li a:hover {
 			}
 		}
 	}
-		
+
+	.popup .sketchfab-embed-wrapper {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		width: 80%;
+		height: 80%;
+	}
+	
+	.popup iframe {
+		border-radius: 20px;
+		width: 100%;
+		height: 100%;
+	}
+	
+	.popup {
+		display: none;
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0, 0, 0, 0.5);
+		z-index: 9999;
+	}
+	
+	.popup .sketchfab-embed-wrapper {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+	
+	.popup .close {
+		position: absolute;
+		top: 20px;
+		right: 20px;
+		font-size: 30px;
+		color: #fff;
+		cursor: pointer;
+	}
+	
 
 	#in-creation {
 		filter: grayscale(100%);
