--- a/style.css
+++ b/style.css
@@ -856,12 +856,13 @@ li a:hover {
 	justify-content: center;
 }
 
-.preorderform{
+.preorder-form {
 	width: 100%;
 	height: 100%;
 	position: absolute;
 	z-index: 999;
 }
+
 .container {
 	overflow-x: hidden;
 	width: 80%;
@@ -871,7 +872,7 @@ li a:hover {
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10vh;
-	
+
 	border-radius: 20px;
 	justify-content: space-evenly;
 	background-color: #b7e4c7;
@@ -881,8 +882,8 @@ li a:hover {
 	width: 100vw;
 }
 
-#preorderForm{
-	.question{
+#preorderForm {
+	.question {
 		height: 50%;
 		align-items: center;
 	}
@@ -985,4 +986,53 @@ select {
 
 .slide-out {
 	animation-name: slideOut;
+}
+
+.preorder-button {
+	align-items: center;
+	background: #B7E4C7;
+	border: 0;
+	border-radius: 8px;
+	box-shadow: -10px -10px 30px 0 #d8f3dc, 10px 10px 30px 0 #1d0dca17;
+	box-sizing: border-box;
+	color: #2a1f62;
+	cursor: pointer;
+	display: flex;
+	font-family: "Cascadia Code", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+	font-size: 1rem;
+	justify-content: center;
+	line-height: 1.5rem;
+	padding: 15px;
+	position: relative;
+	/* left: 50%; */
+	/* top: 0; */
+	/* transform: translateX(-50%); */
+	margin-left: auto;
+	margin-right: auto;
+	transform: translateY(-5vh);
+	text-align: left;
+	transition: .2s;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	white-space: pre;
+	width: max-content;
+	word-break: normal;
+	word-spacing: normal;
+}
+
+.preorder-button:hover {
+	background: #d8f3dc;
+	box-shadow: -15px -15px 30px 0 #d8f3dc, 15px 15px 30px 0 #1d0dca17;
+}
+
+#preorder-form {
+	display: none;
+	opacity: 0;
+	transition: opacity 1s ease-in-out;
+}
+
+#preorder-form.visible {
+	transition: opacity 1s ease-in-out;
+	opacity: 1;
 }
