--- a/style.css
+++ b/style.css
@@ -875,7 +875,12 @@ li a:hover {
 
 	border-radius: 20px;
 	justify-content: space-evenly;
-	background-color: #b7e4c7;
+	background-color: #3c7459;
+
+	h1 {
+		color: #ceebd3;
+		font-size: 5vw;
+	}
 }
 
 #formPage {
@@ -908,6 +913,8 @@ li a:hover {
 label {
 	display: block;
 	font-weight: bold;
+	font-size: 2.5vw;
+	color: #ceebd3;
 }
 
 input[type="text"],
@@ -1004,9 +1011,6 @@ select {
 	line-height: 1.5rem;
 	padding: 15px;
 	position: relative;
-	/* left: 50%; */
-	/* top: 0; */
-	/* transform: translateX(-50%); */
 	margin-left: auto;
 	margin-right: auto;
 	transform: translateY(-5vh);
@@ -1035,4 +1039,43 @@ select {
 #preorder-form.visible {
 	transition: opacity 1s ease-in-out;
 	opacity: 1;
+}
+
+
+#submitButton,
+#continueButton,
+#startButton,
+#previousButton {
+	align-items: center;
+	background: #4f9a76; 
+	border: 0;
+	border-radius: 8px;
+	box-shadow: -10px -10px 30px 0 #3c7459, 10px 10px 30px 0 #1d0dca17; /* Ombre du bouton */
+	box-sizing: border-box;
+	color: #d8f3dc;
+	cursor: pointer;
+	font-family: "Cascadia Code", Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
+	font-size: 1rem;
+	justify-content: center;
+	line-height: 1.5rem;
+	padding: 15px;
+	position: relative;
+	text-align: left;
+	transition: .2s;
+	user-select: none;
+	-webkit-user-select: none;
+	touch-action: manipulation;
+	white-space: pre;
+	width: max-content;
+	word-break: normal;
+	word-spacing: normal;
+}
+
+#submitButton:hover,
+#continueButton:hover,
+#startButton:hover,
+#previousButton:hover {
+	background: #3c7459; 
+	box-shadow: -10px -10px 30px 0 #4f9a76, 15px 15px 30px 0 #29523f;
+	transition-duration: 0.4s
 }
